# SeleniumEnhancer

./: .gitignore  README.md  chrome_wsl_install.sh  examples.py  requirements.txt  selenium_enhancer.py  setup.cfg  setup.py
.github/workflows/: publish_to_pypi_on_master_merge.yml
docs/: README.md
scripts/: chrome_wsl_install.sh  windows_chromedriver_install.bat
selenium_enhancer/: __init__.py  get_latest_chrome_driver.py  selenium_enhancer.py
selenium_enhancer/data/: Google-Analytics-Debugger_v2.8.crx.crx
tests/: basic_usage_test.py
