[metadata]
name = selenium_enhancer
version = attr: selenium_enhancer.__version__
author = Danny Brown
author_email = danny.public.emails@gmail.com
url = https://github.com/dannybrown37/SeleniumEnhancer
description = A package to streamline and enhance your Selenium code
long_description = file: docs/README.md
long_description_content_type = text/markdown
keywords = selenium
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
install_requires=
    selenium
package = find:

[options.package_data]
selenium_enhancer = data/*
